<resources>
    <string name="app_name">PhotoClient</string>
    <string name="settings">settings</string>
    <string name="red">red</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="pink">pink</string>
    <string name="yellow">yellow</string>
    <string name="gray">gray</string>
    <string name="brown">brown</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="added">Photo is added</string>
    <string name="menu_main_title">Main</string>
    <string name="menu_title_settings">Settings</string>
</resources>