<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".SettingsFragment">

    <Button
        android:id="@+id/redBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:theme="@style/AppTheme" />

    <Button
        android:id="@+id/greenBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green" />

    <Button
        android:id="@+id/blueBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue" />

    <Button
        android:id="@+id/pinkBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pink" />

    <Button
        android:id="@+id/yellowBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yellow" />

    <Button
        android:id="@+id/grayBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gray" />

    <Button
        android:id="@+id/brownBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/brown" />
</LinearLayout>